--- a/Chapter06.Rmd
+++ b/Chapter06.Rmd
@@ -33,10 +33,6 @@ opts_chunk$set(
   tidy=FALSE,     # display code as typed
   size="small"    # slightly smaller font for code
 )
-
-```{r, include=FALSE}
-# Load additional packages here.  Uncomment the line below to use Project MOSAIC data sets.
-# require(mosaicData)   
 ```
 
 ## Introduction and background 
@@ -57,14 +53,43 @@ Figure 6.1 (page 152) displays the scatterplot of the average tracking error ove
 ```{r}
 library(mosaic); library(readr)
 options(digits=3)
-Hurricanes <- read_csv("http://www.amherst.edu/~nhorton/sdm4/data/Tracking_Hurricanes_2012.csv")
-names(Hurricanes)
+Hurricanes <- 
+  read_csv("http://www.amherst.edu/~nhorton/sdm4/data/Tracking_hurricanes_2012.csv")
+xyplot(Error72h ~ Year, ylab="Prediction error (nautical miles)", data=Hurricanes)
 ```
 
+ 
 ### Section 6.2: Correlation
 
+Figure 6.2 (page 155) displays the scatterplot of weight vs. height for a sample of students from statistics classes.
+
+```{r}
+HtWt <- read_csv("http://www.amherst.edu/~nhorton/sdm4/data/Heights_and_Weights.csv")
+xyplot(Weight ~ Height, ylab="Weight (lbs)", xlab="Height (in)", data=HtWt)
+cor(Weight ~ Height, data=HtWt)
+```
+
+#### Kendall's Tau and Spearman's Rho
+
+```{r}
+cor(Weight ~ Height, method="kendall", data=HtWt)
+cor(Weight ~ Height, method="spearman", data=HtWt)
+```
+       
 ### Section 6.3: Warning: Correlation does not always equal Causation
 
 ### Section 6.4: Straightening scatterplots
 
+Since the dataset is so small for Figure 6.10 (page 165) we can enter it by hand.
+```{r}
+fstop <- c(2.8, 4, 5.6, 8, 11, 16, 22, 32)
+shutter <- c(1/1000, 1/500, 1/250, 1/125, 1/60, 1/30, 1/15, 1/8)
+lenses <- data.frame(fstop, shutter)
+xyplot(fstop ~ shutter, ylab="f/stop", xlab="Shutter Speed (sec)", data=lenses)
+```
 
+A new transformed variable can be added using the `mutate` function.
+```{r}
+lenses <- mutate(lenses, fstopsq = fstop*fstop)
+xyplot(fstopsq ~ shutter, ylab="f/stop (squared)", xlab="Shutter Speed (sec)", data=lenses)
+```
